Fix center alignment on docs menu bar

--- a/docs/assets/scss/docs/_docs.scss
+++ b/docs/assets/scss/docs/_docs.scss
@@ -159,6 +159,7 @@ $rad: 5px;
   li a {
     font-size: .8rem;
     color: $primary-color;
+    align-items: flex-start;
   }
   
 }
